<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/profile_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e1e1e1">

        <ImageView
            android:id="@+id/profile_avatar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleX="1.6" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/profile_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@null"
            app:srcCompat="@drawable/ic_arrow_back_24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_favorite_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="230dp"
            android:layout_marginLeft="330dp"
            android:backgroundTint="#FFFFFF"
            android:src="@drawable/ic_star_border_white_24dp"
            app:tint="@color/colorStar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_favorite_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="230dp"
            android:layout_marginLeft="330dp"
            android:src="@drawable/ic_star_white_24dp"
            app:backgroundTint="#FFFFFF"
            app:tint="@color/colorStar" />


        <RelativeLayout
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_avatar"
            android:layout_margin="15dp"
            android:background="@drawable/corners_view">


            <TextView
                android:id="@+id/profile_view1_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="#010101"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/baseline_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_view1_name"
                android:layout_margin="15dp"
                android:src="@drawable/ic_baseline_place_24dp" />

            <TextView
                android:id="@+id/profile_view1_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_view1_name"
                android:layout_margin="15dp"
                android:layout_toRightOf="@id/baseline_place"
                android:textColor="#6e6e73"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/baseline_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/baseline_place"
                android:layout_margin="15dp"
                android:src="@drawable/ic_baseline_phone_24dp" />

            <TextView
                android:id="@+id/profile_view1_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_view1_adress"
                android:layout_margin="15dp"
                android:layout_toRightOf="@id/baseline_phone"
                android:textColor="#6e6e73"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/social_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/baseline_phone"
                android:layout_margin="15dp"
                android:src="@drawable/ic_social_network_24dp" />

            <TextView
                android:id="@+id/profile_view1_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_view1_phone"
                android:layout_margin="15dp"
                android:layout_toRightOf="@+id/social_network"
                android:textColor="#6e6e73"
                android:textSize="18dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_margin="15dp"
            android:background="@drawable/corners_view">

            <TextView
                android:id="@+id/about_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="A propos de moi"
                android:textColor="#010101"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_about"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_below="@+id/about_me"
                android:layout_margin="15dp"
                android:textColor="#6e6e73"
                android:textSize="16dp" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>